# Synthesizer

./: README.md  main.py  makefile  pyproject.toml  run.ps1
src/: main.py  tempCodeRunnerFile.py
src/components/: Enveloppe.py  NotesContainer.py  NotesController.py  SynthController.py
src/components/Notes/: Note.py  NotesController.py  NotesFrequenciesMapper.py  NotesOctaveMapper.py
src/components/Notes/mappers/: KeyboardToNotesMapper.py  NotesToFrequenciesMapper.py
src/components/oscillators/: BaseOscillator.py  CombinedOscillator.py  IOscillator.py  SawtoothOscillator.py  SineOscillator.py  SquareOscillator.py  TriangleOscillator.py
src/oscillators/: BaseOscillator.py  SawToothOscillator.py  SineOscillator.py  SquareOscillator.py  TriangleOscillator.py
src/visualiser/: visualiser.py
