[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Remito Pepito <remito@lol.gg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
sounddevice = "^0.4.6"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
